[tool.poetry]
name = "amazon-weak-ner-needle"
version = "0.1.0"
description = ""
authors = ["hchen549 <hchen549@wisc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.1.1"
transformers = "^4.35.2"
accelerate = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
